@@ -15,7 +15,10 @@ import org.checkerframework.checker.lock.qual.GuardSatisfied;
 import org.checkerframework.checker.nullness.qual.Nullable;
 import org.junit.jupiter.api.Test;
 
+@SuppressWarnings("PMD.TooManyStaticImports")
 final class ArraysPlumeTest {
+
+  ArraysPlumeTest() {}
 
   @Test
   void testNCopies() {
@@ -87,22 +90,22 @@ final class ArraysPlumeTest {
   void testSum() {
 
     // public static int sum(int[] a)
-    assertTrue(0 == ArraysPlume.sum(new int[0]));
-    assertTrue(10 == ArraysPlume.sum(new int[] {10}));
-    assertTrue(10 == ArraysPlume.sum(new int[] {1, 2, 3, 4}));
+    assertEquals(0, ArraysPlume.sum(new int[0]));
+    assertEquals(10, ArraysPlume.sum(new int[] {10}));
+    assertEquals(10, ArraysPlume.sum(new int[] {1, 2, 3, 4}));
 
     // public static int sum(int[][] a)
-    assertTrue(0 == ArraysPlume.sum(new int[0][0]));
-    assertTrue(78 == ArraysPlume.sum(new int[][] {{1, 2, 3, 4}, {5, 6, 7, 8}, {9, 10, 11, 12}}));
-    assertTrue(68 == ArraysPlume.sum(new int[][] {{1, 2, 3, 4}, {5, 6, 7, 8}, {9, 11, 12}}));
+    assertEquals(0, ArraysPlume.sum(new int[0][0]));
+    assertEquals(78, ArraysPlume.sum(new int[][] {{1, 2, 3, 4}, {5, 6, 7, 8}, {9, 10, 11, 12}}));
+    assertEquals(68, ArraysPlume.sum(new int[][] {{1, 2, 3, 4}, {5, 6, 7, 8}, {9, 11, 12}}));
 
     // public static double sum(double[] a)
-    assertTrue(0 == ArraysPlume.sum(new double[0]));
-    assertTrue(3.14 == ArraysPlume.sum(new double[] {3.14}));
-    assertTrue(8.624 == ArraysPlume.sum(new double[] {3.14, 2.718, -1.234, 4}));
+    assertEquals(0, ArraysPlume.sum(new double[0]));
+    assertEquals(3.14, ArraysPlume.sum(new double[] {3.14}));
+    assertEquals(8.624, ArraysPlume.sum(new double[] {3.14, 2.718, -1.234, 4}));
 
     // public static double sum(double[][] a)
-    assertTrue(0 == ArraysPlume.sum(new double[0][0]));
+    assertEquals(0, ArraysPlume.sum(new double[0][0]));
     assertEquals(
         79.5,
         ArraysPlume.sum(new double[][] {{1.1, 2.2, 3.3, 4.4}, {5.5, 6, 7, 8}, {9, 10, 11, 12}}));
@@ -151,28 +154,28 @@ final class ArraysPlumeTest {
     // public static int indexOfEq(Object[] a, Object elt)
     Integer[] a = new Integer[10];
     for (int i = 0; i < a.length; i++) {
-      a[i] = new Integer(i);
+      a[i] = Integer.valueOf(i);
     }
-    assertTrue(ArraysPlume.indexOf(a, new Integer(-1)) == -1);
-    assertTrue(ArraysPlume.indexOf(a, new Integer(0)) == 0);
-    assertTrue(ArraysPlume.indexOf(a, new Integer(7)) == 7);
-    assertTrue(ArraysPlume.indexOf(a, new Integer(9)) == 9);
-    assertTrue(ArraysPlume.indexOf(a, new Integer(10)) == -1);
-    assertTrue(ArraysPlume.indexOf(a, new Integer(20)) == -1);
-    assertTrue(ArraysPlume.indexOf(a, (Object) null) == -1);
-    assertTrue(ArraysPlume.indexOf(a, (Object) null, 1, 5) == -1);
+    assertEquals(-1, ArraysPlume.indexOf(a, Integer.valueOf(-1)));
+    assertEquals(0, ArraysPlume.indexOf(a, Integer.valueOf(0)));
+    assertEquals(7, ArraysPlume.indexOf(a, Integer.valueOf(7)));
+    assertEquals(9, ArraysPlume.indexOf(a, Integer.valueOf(9)));
+    assertEquals(-1, ArraysPlume.indexOf(a, Integer.valueOf(10)));
+    assertEquals(-1, ArraysPlume.indexOf(a, Integer.valueOf(20)));
+    assertEquals(-1, ArraysPlume.indexOf(a, (Object) null));
+    assertEquals(-1, ArraysPlume.indexOf(a, (Object) null, 1, 5));
 
-    assertTrue(ArraysPlume.indexOfEq(a, new Integer(-1)) == -1);
-    assertTrue(ArraysPlume.indexOfEq(a, new Integer(0)) == -1);
-    assertTrue(ArraysPlume.indexOfEq(a, new Integer(7)) == -1);
-    assertTrue(ArraysPlume.indexOfEq(a, new Integer(9)) == -1);
-    assertTrue(ArraysPlume.indexOfEq(a, new Integer(10)) == -1);
-    assertTrue(ArraysPlume.indexOfEq(a, new Integer(20)) == -1);
-    assertTrue(ArraysPlume.indexOfEq(a, (Object) null) == -1);
-    assertTrue(ArraysPlume.indexOfEq(a, (Object) null, 1, 5) == -1);
-    assertTrue(ArraysPlume.indexOfEq(a, a[0]) == 0);
-    assertTrue(ArraysPlume.indexOfEq(a, a[7]) == 7);
-    assertTrue(ArraysPlume.indexOfEq(a, a[9]) == 9);
+    assertEquals(-1, ArraysPlume.indexOfEq(a, Integer.valueOf(-1)));
+    assertEquals(-1, ArraysPlume.indexOfEq(a, new Integer(0)));
+    assertEquals(-1, ArraysPlume.indexOfEq(a, new Integer(7)));
+    assertEquals(-1, ArraysPlume.indexOfEq(a, new Integer(9)));
+    assertEquals(-1, ArraysPlume.indexOfEq(a, Integer.valueOf(10)));
+    assertEquals(-1, ArraysPlume.indexOfEq(a, Integer.valueOf(20)));
+    assertEquals(-1, ArraysPlume.indexOfEq(a, (Object) null));
+    assertEquals(-1, ArraysPlume.indexOfEq(a, (Object) null, 1, 5));
+    assertEquals(0, ArraysPlume.indexOfEq(a, a[0]));
+    assertEquals(7, ArraysPlume.indexOfEq(a, a[7]));
+    assertEquals(9, ArraysPlume.indexOfEq(a, a[9]));
   }
 
   // No test for `contains(T[])` for now because it just calls indexOf.
@@ -187,12 +190,12 @@ final class ArraysPlumeTest {
     // These calls are no longer legal.  I could create a new version of indexOf that
     // permits nulls, one for LinkedList and one for Vector (both of which permit nulls).
     // @MinLen(1) List<?> listOfStrings = Collections.singletonList("hello");
-    // assertTrue(ArraysPlume.indexOf(listOfStrings, (Object) null) == -1);
-    // assertTrue(ArraysPlume.indexOf(listOfStrings, (Object) null, 0, 0) == -1);
-    // assertTrue(ArraysPlume.indexOf(listOfStrings, (Object) null, 0, 1) == -1);
-    // assertTrue(ArraysPlume.indexOfEq(listOfStrings, (Object) null) == -1);
-    // assertTrue(ArraysPlume.indexOfEq(listOfStrings, (Object) null, 0, 0) == -1);
-    // assertTrue(ArraysPlume.indexOfEq(listOfStrings, (Object) null, 0, 1) == -1);
+    // assertEquals(-1, ArraysPlume.indexOf(listOfStrings, (Object) null));
+    // assertEquals(-1, ArraysPlume.indexOf(listOfStrings, (Object) null, 0, 0));
+    // assertEquals(-1, ArraysPlume.indexOf(listOfStrings, (Object) null, 0, 1));
+    // assertEquals(-1, ArraysPlume.indexOfEq(listOfStrings, (Object) null));
+    // assertEquals(-1, ArraysPlume.indexOfEq(listOfStrings, (Object) null, 0, 0));
+    // assertEquals(-1, ArraysPlume.indexOfEq(listOfStrings, (Object) null, 0, 1));
   }
 
   @Test
@@ -204,12 +207,12 @@ final class ArraysPlumeTest {
       for (int i = 0; i < a.length; i++) {
         a[i] = i;
       }
-      assertTrue(ArraysPlume.indexOf(a, -1) == -1);
-      assertTrue(ArraysPlume.indexOf(a, 0) == 0);
-      assertTrue(ArraysPlume.indexOf(a, 7) == 7);
-      assertTrue(ArraysPlume.indexOf(a, 9) == 9);
-      assertTrue(ArraysPlume.indexOf(a, 10) == -1);
-      assertTrue(ArraysPlume.indexOf(a, 20) == -1);
+      assertEquals(-1, ArraysPlume.indexOf(a, -1));
+      assertEquals(0, ArraysPlume.indexOf(a, 0));
+      assertEquals(7, ArraysPlume.indexOf(a, 7));
+      assertEquals(9, ArraysPlume.indexOf(a, 9));
+      assertEquals(-1, ArraysPlume.indexOf(a, 10));
+      assertEquals(-1, ArraysPlume.indexOf(a, 20));
     }
 
     // public static int indexOf(boolean[] a, boolean elt)
@@ -218,22 +221,22 @@ final class ArraysPlumeTest {
       for (int i = 0; i < a.length; i++) {
         a[i] = false;
       }
-      assertTrue(ArraysPlume.indexOf(a, true) == -1);
-      assertTrue(ArraysPlume.indexOf(a, false) == 0);
+      assertEquals(-1, ArraysPlume.indexOf(a, true));
+      assertEquals(0, ArraysPlume.indexOf(a, false));
       a[9] = true;
-      assertTrue(ArraysPlume.indexOf(a, true) == 9);
-      assertTrue(ArraysPlume.indexOf(a, false) == 0);
+      assertEquals(9, ArraysPlume.indexOf(a, true));
+      assertEquals(0, ArraysPlume.indexOf(a, false));
       a[7] = true;
-      assertTrue(ArraysPlume.indexOf(a, true) == 7);
-      assertTrue(ArraysPlume.indexOf(a, false) == 0);
+      assertEquals(7, ArraysPlume.indexOf(a, true));
+      assertEquals(0, ArraysPlume.indexOf(a, false));
       a[0] = true;
-      assertTrue(ArraysPlume.indexOf(a, true) == 0);
-      assertTrue(ArraysPlume.indexOf(a, false) == 1);
+      assertEquals(0, ArraysPlume.indexOf(a, true));
+      assertEquals(1, ArraysPlume.indexOf(a, false));
       for (int i = 0; i < a.length; i++) {
         a[i] = true;
       }
-      assertTrue(ArraysPlume.indexOf(a, true) == 0);
-      assertTrue(ArraysPlume.indexOf(a, false) == -1);
+      assertEquals(0, ArraysPlume.indexOf(a, true));
+      assertEquals(-1, ArraysPlume.indexOf(a, false));
     }
   }
 
@@ -252,48 +255,48 @@ final class ArraysPlumeTest {
       for (int i = 0; i < a.length; i++) {
         a[i] = i;
       }
-      Integer[] b = new Integer[] {};
-      Integer[] c = new Integer[] {a[0], a[1], a[2]};
-      Integer[] d = new Integer[] {a[1], a[2]};
-      Integer[] e = new Integer[] {a[2], a[3], a[4], a[5]};
-      Integer[] f = new Integer[] {a[7], a[8], a[9]};
-      Integer[] g = new Integer[] {a[7], new Integer(8), a[9]};
-      Integer[] h = new Integer[] {a[7], a[8], a[9], new Integer(10)};
+      Integer[] b = {};
+      Integer[] c = {a[0], a[1], a[2]};
+      Integer[] d = {a[1], a[2]};
+      Integer[] e = {a[2], a[3], a[4], a[5]};
+      Integer[] f = {a[7], a[8], a[9]};
+      Integer[] g = {a[7], new Integer(8), a[9]};
+      Integer[] h = {a[7], a[8], a[9], new Integer(10)};
       @SuppressWarnings("nullness") // accommodates poor annotation on indexOf(Object[], Object[])
-      Integer[] i = new Integer[] {a[7], a[8], null, a[9], new Integer(10)};
+      Integer[] i = {a[7], a[8], null, a[9], new Integer(10)};
       @SuppressWarnings("nullness") // accommodates poor annotation on indexOf(Object[], Object[])
-      Integer[] j = new Integer[] {a[8], null, a[9]};
-      Integer[] c2 = new Integer[] {new Integer(0), new Integer(1), new Integer(2)};
-      Integer[] d2 = new Integer[] {new Integer(1), new Integer(2)};
-      Integer[] e2 = new Integer[] {new Integer(2), new Integer(3), new Integer(4), new Integer(5)};
-      Integer[] f2 = new Integer[] {new Integer(7), new Integer(8), new Integer(9)};
+      Integer[] j = {a[8], null, a[9]};
+      Integer[] c2 = {new Integer(0), new Integer(1), new Integer(2)};
+      Integer[] d2 = {new Integer(1), new Integer(2)};
+      Integer[] e2 = {new Integer(2), new Integer(3), new Integer(4), new Integer(5)};
+      Integer[] f2 = {new Integer(7), new Integer(8), new Integer(9)};
 
-      assertTrue(ArraysPlume.indexOf(a, b) == 0);
-      assertTrue(ArraysPlume.indexOfEq(a, b) == 0);
-      assertTrue(ArraysPlume.indexOf(a, c) == 0);
-      assertTrue(ArraysPlume.indexOfEq(a, c) == 0);
-      assertTrue(ArraysPlume.indexOf(a, c2) == 0);
-      assertTrue(ArraysPlume.indexOfEq(a, c2) == -1);
-      assertTrue(ArraysPlume.indexOf(a, d) == 1);
-      assertTrue(ArraysPlume.indexOfEq(a, d) == 1);
-      assertTrue(ArraysPlume.indexOf(a, d2) == 1);
-      assertTrue(ArraysPlume.indexOfEq(a, d2) == -1);
-      assertTrue(ArraysPlume.indexOf(a, e) == 2);
-      assertTrue(ArraysPlume.indexOfEq(a, e) == 2);
-      assertTrue(ArraysPlume.indexOf(a, e2) == 2);
-      assertTrue(ArraysPlume.indexOfEq(a, e2) == -1);
-      assertTrue(ArraysPlume.indexOf(a, f) == 7);
-      assertTrue(ArraysPlume.indexOfEq(a, f) == 7);
-      assertTrue(ArraysPlume.indexOf(a, f2) == 7);
-      assertTrue(ArraysPlume.indexOfEq(a, f2) == -1);
-      assertTrue(ArraysPlume.indexOf(a, g) == 7);
-      assertTrue(ArraysPlume.indexOfEq(a, g) == -1);
-      assertTrue(ArraysPlume.indexOf(a, h) == -1);
-      assertTrue(ArraysPlume.indexOfEq(a, h) == -1);
-      assertTrue(ArraysPlume.indexOf(i, j) == 1);
-      assertTrue(ArraysPlume.indexOfEq(i, j) == 1);
-      assertTrue(ArraysPlume.indexOf(a, i) == -1);
-      assertTrue(ArraysPlume.indexOfEq(a, i) == -1);
+      assertEquals(0, ArraysPlume.indexOf(a, b));
+      assertEquals(0, ArraysPlume.indexOfEq(a, b));
+      assertEquals(0, ArraysPlume.indexOf(a, c));
+      assertEquals(0, ArraysPlume.indexOfEq(a, c));
+      assertEquals(0, ArraysPlume.indexOf(a, c2));
+      assertEquals(-1, ArraysPlume.indexOfEq(a, c2));
+      assertEquals(1, ArraysPlume.indexOf(a, d));
+      assertEquals(1, ArraysPlume.indexOfEq(a, d));
+      assertEquals(1, ArraysPlume.indexOf(a, d2));
+      assertEquals(-1, ArraysPlume.indexOfEq(a, d2));
+      assertEquals(2, ArraysPlume.indexOf(a, e));
+      assertEquals(2, ArraysPlume.indexOfEq(a, e));
+      assertEquals(2, ArraysPlume.indexOf(a, e2));
+      assertEquals(-1, ArraysPlume.indexOfEq(a, e2));
+      assertEquals(7, ArraysPlume.indexOf(a, f));
+      assertEquals(7, ArraysPlume.indexOfEq(a, f));
+      assertEquals(7, ArraysPlume.indexOf(a, f2));
+      assertEquals(-1, ArraysPlume.indexOfEq(a, f2));
+      assertEquals(7, ArraysPlume.indexOf(a, g));
+      assertEquals(-1, ArraysPlume.indexOfEq(a, g));
+      assertEquals(-1, ArraysPlume.indexOf(a, h));
+      assertEquals(-1, ArraysPlume.indexOfEq(a, h));
+      assertEquals(1, ArraysPlume.indexOf(i, j));
+      assertEquals(1, ArraysPlume.indexOfEq(i, j));
+      assertEquals(-1, ArraysPlume.indexOf(a, i));
+      assertEquals(-1, ArraysPlume.indexOfEq(a, i));
     }
 
     // public static int indexOf(int[] a, int[] sub)
@@ -302,32 +305,32 @@ final class ArraysPlumeTest {
       for (int i = 0; i < a.length; i++) {
         a[i] = i;
       }
-      int[] b = new int[] {};
-      int[] c = new int[] {a[0], a[1], a[2]};
-      int[] d = new int[] {a[1], a[2]};
-      int[] e = new int[] {a[2], a[3], a[4], a[5]};
-      int[] f = new int[] {a[7], a[8], a[9]};
-      int[] g = new int[] {a[7], 22, a[9]};
-      int[] h = new int[] {a[7], a[8], a[9], 10};
+      int[] b = {};
+      int[] c = {a[0], a[1], a[2]};
+      int[] d = {a[1], a[2]};
+      int[] e = {a[2], a[3], a[4], a[5]};
+      int[] f = {a[7], a[8], a[9]};
+      int[] g = {a[7], 22, a[9]};
+      int[] h = {a[7], a[8], a[9], 10};
 
-      assertTrue(ArraysPlume.indexOf(a, b) == 0);
-      assertTrue(ArraysPlume.indexOf(a, c) == 0);
-      assertTrue(ArraysPlume.indexOf(a, d) == 1);
-      assertTrue(ArraysPlume.indexOf(a, e) == 2);
-      assertTrue(ArraysPlume.indexOf(a, f) == 7);
-      assertTrue(ArraysPlume.indexOf(a, g) == -1);
-      assertTrue(ArraysPlume.indexOf(a, h) == -1);
+      assertEquals(0, ArraysPlume.indexOf(a, b));
+      assertEquals(0, ArraysPlume.indexOf(a, c));
+      assertEquals(1, ArraysPlume.indexOf(a, d));
+      assertEquals(2, ArraysPlume.indexOf(a, e));
+      assertEquals(7, ArraysPlume.indexOf(a, f));
+      assertEquals(-1, ArraysPlume.indexOf(a, g));
+      assertEquals(-1, ArraysPlume.indexOf(a, h));
 
       // Tests pulled from actual StackAr data
-      int[] origTheArray =
-          new int[] {
-            1267757, 1267757, 1267757, 1267757, 1267757, 1267757, 1267757, 1267757, 1267757,
-            1267757, 1267757, 0, 0, 0, 0, 0, 0, 0, 0, 0
-          };
+      int[] origTheArray = {
+        1_267_757, 1_267_757, 1_267_757, 1_267_757, 1_267_757, 1_267_757, 1_267_757, 1_267_757,
+            1_267_757, 1_267_757,
+        1_267_757, 0, 0, 0, 0, 0, 0, 0, 0, 0
+      };
 
-      int[] postTheArray = new int[] {0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0};
-      assertTrue(ArraysPlume.indexOf(postTheArray, origTheArray) == -1);
-      assertTrue(ArraysPlume.indexOf(origTheArray, postTheArray) == -1);
+      int[] postTheArray = {0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0};
+      assertEquals(-1, ArraysPlume.indexOf(postTheArray, origTheArray));
+      assertEquals(-1, ArraysPlume.indexOf(origTheArray, postTheArray));
     }
   }
 
@@ -365,8 +368,8 @@ final class ArraysPlumeTest {
     // public static String toStringQuoted(List<?> a)
     // public static String toString(List<?> a, boolean quoted)
     {
-      assertTrue(ArraysPlume.toString((Object[]) null).equals("null"));
-      assertTrue(ArraysPlume.toStringQuoted((Object[]) null).equals("null"));
+      assertEquals("null", ArraysPlume.toString((Object[]) null));
+      assertEquals("null", ArraysPlume.toStringQuoted((Object[]) null));
       assertTrue(ArraysPlume.toString((List<?>) null).equals("null"));
       assertTrue(ArraysPlume.toStringQuoted((List<?>) null).equals("null"));
       assertEquals(
@@ -379,9 +382,9 @@ final class ArraysPlumeTest {
     }
 
     // static String toString(int[] a)
-    assertTrue(Arrays.toString(new int[] {}).equals("[]"));
-    assertTrue(Arrays.toString(new int[] {0}).equals("[0]"));
-    assertTrue(Arrays.toString(new int[] {0, 1, 2}).equals("[0, 1, 2]"));
+    assertEquals("[]", Arrays.toString(new int[] {}));
+    assertEquals("[0]", Arrays.toString(new int[] {0}));
+    assertEquals("[0, 1, 2]", Arrays.toString(new int[] {0, 1, 2}));
     assertEquals(
         "[\"a\\\"quote\", \"b\", \"c\\\\backslash\", \"d\\nnewline\"]",
         ArraysPlume.toStringQuoted(new Object[] {"a\"quote", "b", "c\\backslash", "d\nnewline"}));
@@ -396,59 +399,59 @@ final class ArraysPlumeTest {
     assertTrue(ArraysPlume.isSorted(new int[] {}));
     assertTrue(ArraysPlume.isSorted(new int[] {0}));
     assertTrue(ArraysPlume.isSorted(new int[] {0, 1}));
-    assertTrue(!ArraysPlume.isSorted(new int[] {1, 0}));
-    assertTrue(!ArraysPlume.isSorted(new int[] {0, 1, 2, 1, 2, 3}));
+    assertFalse(ArraysPlume.isSorted(new int[] {1, 0}));
+    assertFalse(ArraysPlume.isSorted(new int[] {0, 1, 2, 1, 2, 3}));
   }
 
   @Test
   void test_hasNoDuplicates() {
     // public static int hasNoDuplicates(int[] a)
-    assertTrue(ArraysPlume.hasNoDuplicates(new int[] {1, 2, 3, 5, 4, 0}) == true);
-    assertTrue(ArraysPlume.hasNoDuplicates(new int[] {1, 2, 3, 5, 4, 100}) == true);
-    assertTrue(ArraysPlume.hasNoDuplicates(new int[] {2, 2, 3, 5, 4, 0}) == false);
-    assertTrue(ArraysPlume.hasNoDuplicates(new int[] {1, 2, 3, 5, 4, 1}) == false);
-    assertTrue(ArraysPlume.hasNoDuplicates(new int[] {1, 2, -3, -5, 4, 0}) == true);
-    assertTrue(ArraysPlume.hasNoDuplicates(new int[] {1, 2, -2, -2, 4, 100}) == false);
-    assertTrue(ArraysPlume.hasNoDuplicates(new int[] {}) == true);
-    assertTrue(ArraysPlume.hasNoDuplicates(new int[] {42}) == true);
+    assertTrue(ArraysPlume.hasNoDuplicates(new int[] {1, 2, 3, 5, 4, 0}));
+    assertTrue(ArraysPlume.hasNoDuplicates(new int[] {1, 2, 3, 5, 4, 100}));
+    assertFalse(ArraysPlume.hasNoDuplicates(new int[] {2, 2, 3, 5, 4, 0}));
+    assertFalse(ArraysPlume.hasNoDuplicates(new int[] {1, 2, 3, 5, 4, 1}));
+    assertTrue(ArraysPlume.hasNoDuplicates(new int[] {1, 2, -3, -5, 4, 0}));
+    assertFalse(ArraysPlume.hasNoDuplicates(new int[] {1, 2, -2, -2, 4, 100}));
+    assertTrue(ArraysPlume.hasNoDuplicates(new int[] {}));
+    assertTrue(ArraysPlume.hasNoDuplicates(new int[] {42}));
 
     // public static int hasNoDuplicates(long[] a)
-    assertTrue(ArraysPlume.hasNoDuplicates(new long[] {1, 2, 3, 5, 4, 0}) == true);
-    assertTrue(ArraysPlume.hasNoDuplicates(new long[] {1, 2, 3, 5, 4, 100}) == true);
-    assertTrue(ArraysPlume.hasNoDuplicates(new long[] {2, 2, 3, 5, 4, 0}) == false);
-    assertTrue(ArraysPlume.hasNoDuplicates(new long[] {1, 2, 3, 5, 4, 1}) == false);
-    assertTrue(ArraysPlume.hasNoDuplicates(new long[] {1, 2, -3, -5, 4, 0}) == true);
-    assertTrue(ArraysPlume.hasNoDuplicates(new long[] {1, 2, -2, -2, 4, 100}) == false);
-    assertTrue(ArraysPlume.hasNoDuplicates(new long[] {}) == true);
-    assertTrue(ArraysPlume.hasNoDuplicates(new long[] {42}) == true);
+    assertTrue(ArraysPlume.hasNoDuplicates(new long[] {1, 2, 3, 5, 4, 0}));
+    assertTrue(ArraysPlume.hasNoDuplicates(new long[] {1, 2, 3, 5, 4, 100}));
+    assertFalse(ArraysPlume.hasNoDuplicates(new long[] {2, 2, 3, 5, 4, 0}));
+    assertFalse(ArraysPlume.hasNoDuplicates(new long[] {1, 2, 3, 5, 4, 1}));
+    assertTrue(ArraysPlume.hasNoDuplicates(new long[] {1, 2, -3, -5, 4, 0}));
+    assertFalse(ArraysPlume.hasNoDuplicates(new long[] {1, 2, -2, -2, 4, 100}));
+    assertTrue(ArraysPlume.hasNoDuplicates(new long[] {}));
+    assertTrue(ArraysPlume.hasNoDuplicates(new long[] {42}));
 
     // public static int hasNoDuplicates(double[] a)
-    assertTrue(ArraysPlume.hasNoDuplicates(new double[] {1, 2, 3, 5, 4, 0}) == true);
-    assertTrue(ArraysPlume.hasNoDuplicates(new double[] {1, 2, 3, 5, 4, 100}) == true);
-    assertTrue(ArraysPlume.hasNoDuplicates(new double[] {2, 2, 3, 5, 4, 0}) == false);
-    assertTrue(ArraysPlume.hasNoDuplicates(new double[] {1, 2, 3, 5, 4, 1}) == false);
-    assertTrue(ArraysPlume.hasNoDuplicates(new double[] {1., 1.001, -3, -5, 4, 0}) == true);
-    assertTrue(ArraysPlume.hasNoDuplicates(new double[] {1., 2, -2.00, -2, 4, 100}) == false);
-    assertTrue(ArraysPlume.hasNoDuplicates(new double[] {}) == true);
-    assertTrue(ArraysPlume.hasNoDuplicates(new double[] {42}) == true);
+    assertTrue(ArraysPlume.hasNoDuplicates(new double[] {1, 2, 3, 5, 4, 0}));
+    assertTrue(ArraysPlume.hasNoDuplicates(new double[] {1, 2, 3, 5, 4, 100}));
+    assertFalse(ArraysPlume.hasNoDuplicates(new double[] {2, 2, 3, 5, 4, 0}));
+    assertFalse(ArraysPlume.hasNoDuplicates(new double[] {1, 2, 3, 5, 4, 1}));
+    assertTrue(ArraysPlume.hasNoDuplicates(new double[] {1., 1.001, -3, -5, 4, 0}));
+    assertFalse(ArraysPlume.hasNoDuplicates(new double[] {1., 2, -2.00, -2, 4, 100}));
+    assertTrue(ArraysPlume.hasNoDuplicates(new double[] {}));
+    assertTrue(ArraysPlume.hasNoDuplicates(new double[] {42}));
 
     // public static int hasNoDuplicates(String[] a)
-    assertTrue(ArraysPlume.hasNoDuplicates(new String[] {"1", "2", "3", "5", "4", "0"}) == true);
-    assertTrue(ArraysPlume.hasNoDuplicates(new String[] {"A", "a", "foo", "Foo", ""}) == true);
-    assertTrue(ArraysPlume.hasNoDuplicates(new String[] {" ", " "}) == false);
-    assertTrue(ArraysPlume.hasNoDuplicates(new String[] {"  ", " "}) == true);
+    assertTrue(ArraysPlume.hasNoDuplicates(new String[] {"1", "2", "3", "5", "4", "0"}));
+    assertTrue(ArraysPlume.hasNoDuplicates(new String[] {"A", "a", "foo", "Foo", ""}));
+    assertFalse(ArraysPlume.hasNoDuplicates(new String[] {" ", " "}));
+    assertTrue(ArraysPlume.hasNoDuplicates(new String[] {"  ", " "}));
   }
 
   @Test
   void test_fnIsPermutation() {
     // public static boolean fnIsPermutation(int[] a)
-    assertTrue(ArraysPlume.fnIsPermutation(new int[] {0, 1, 2, 3}) == true);
-    assertTrue(ArraysPlume.fnIsPermutation(new int[] {1, 2, 3, 0}) == true);
-    assertTrue(ArraysPlume.fnIsPermutation(new int[] {3, 2, 1, 0}) == true);
-    assertTrue(ArraysPlume.fnIsPermutation(new int[] {0, 1, 2, 2}) == false);
-    assertTrue(ArraysPlume.fnIsPermutation(new int[] {0, -1, 2, 3}) == false);
-    assertTrue(ArraysPlume.fnIsPermutation(new int[] {0, 1, 2, 4}) == false);
-    assertTrue(ArraysPlume.fnIsPermutation(new int[] {0, 0, 0, 0}) == false);
+    assertTrue(ArraysPlume.fnIsPermutation(new int[] {0, 1, 2, 3}));
+    assertTrue(ArraysPlume.fnIsPermutation(new int[] {1, 2, 3, 0}));
+    assertTrue(ArraysPlume.fnIsPermutation(new int[] {3, 2, 1, 0}));
+    assertFalse(ArraysPlume.fnIsPermutation(new int[] {0, 1, 2, 2}));
+    assertFalse(ArraysPlume.fnIsPermutation(new int[] {0, -1, 2, 3}));
+    assertFalse(ArraysPlume.fnIsPermutation(new int[] {0, 1, 2, 4}));
+    assertFalse(ArraysPlume.fnIsPermutation(new int[] {0, 0, 0, 0}));
   }
 
   @Test
@@ -512,22 +515,22 @@ final class ArraysPlumeTest {
 
     // public static int[] fnCompose(int[] a, int[] b)
     {
-      int[] a1 = new int[] {0, 1, 2, 3};
-      int[] a2 = new int[] {1, 2, 3, 0};
-      int[] a3 = new int[] {3, 2, 1, 0};
-      int[] a4 = new int[] {0, 1, 0, 3};
-      int[] a5 = new int[] {0, 5, 2, 1};
-      int[] a7 = new int[] {0};
-      int[] a8 = new int[] {5};
-      int[] a9 = new int[] {1, 2, 3, 5};
-      int[] a10 = new int[] {1, 2, 3, 5, -1, -1};
+      int[] a1 = {0, 1, 2, 3};
+      int[] a2 = {1, 2, 3, 0};
+      int[] a3 = {3, 2, 1, 0};
+      int[] a4 = {0, 1, 0, 3};
+      int[] a5 = {0, 5, 2, 1};
+      int[] a7 = {0};
+      int[] a8 = {5};
+      int[] a9 = {1, 2, 3, 5};
+      int[] a10 = {1, 2, 3, 5, -1, -1};
 
-      assertArrayEquals(ArraysPlume.fnCompose(a1, a1), a1);
-      assertArrayEquals(ArraysPlume.fnCompose(a2, a2), new int[] {2, 3, 0, 1});
-      assertArrayEquals(ArraysPlume.fnCompose(a3, a3), a1);
-      assertArrayEquals(ArraysPlume.fnCompose(a4, a5), new int[] {0, 5, 0, 1});
-      assertArrayEquals(ArraysPlume.fnCompose(a7, a8), new int[] {5});
-      assertArrayEquals(ArraysPlume.fnCompose(a9, a10), new int[] {2, 3, 5, -1});
+      assertArrayEquals(a1, ArraysPlume.fnCompose(a1, a1));
+      assertArrayEquals(new int[] {2, 3, 0, 1}, ArraysPlume.fnCompose(a2, a2));
+      assertArrayEquals(a1, ArraysPlume.fnCompose(a3, a3));
+      assertArrayEquals(new int[] {0, 5, 0, 1}, ArraysPlume.fnCompose(a4, a5));
+      assertArrayEquals(new int[] {5}, ArraysPlume.fnCompose(a7, a8));
+      assertArrayEquals(new int[] {2, 3, 5, -1}, ArraysPlume.fnCompose(a9, a10));
     }
   }
 
@@ -562,20 +565,20 @@ final class ArraysPlumeTest {
         assertArrayEquals(f2, f2Copy);
       }
 
-      double[] a1 = new double[] {1, 5, 10};
-      double[] a2 = new double[] {};
-      double[] a3 = new double[] {1};
-      double[] a4 = new double[] {10};
-      double[] a5 = new double[] {1, 10, 15, 20};
-      double[] a6 = new double[] {10, 10, 10, 10, 10, 1};
+      double[] a1 = {1, 5, 10};
+      double[] a2 = {};
+      double[] a3 = {1};
+      double[] a4 = {10};
+      double[] a5 = {1, 10, 15, 20};
+      double[] a6 = {10, 10, 10, 10, 10, 1};
 
       assertTrue(ArraysPlume.isSubset(a2, a1));
-      assertTrue(!ArraysPlume.isSubset(a1, a2));
-      assertTrue(!ArraysPlume.isSubset(a1, a5));
+      assertFalse(ArraysPlume.isSubset(a1, a2));
+      assertFalse(ArraysPlume.isSubset(a1, a5));
       assertTrue(ArraysPlume.isSubset(a3, a1));
       assertTrue(ArraysPlume.isSubset(a4, a1));
       assertTrue(ArraysPlume.isSubset(a6, a1));
-      assertTrue(!ArraysPlume.isSubset(a1, a6));
+      assertFalse(ArraysPlume.isSubset(a1, a6));
     }
   }
 
@@ -601,22 +604,22 @@ final class ArraysPlumeTest {
     Comparator<int[]> iacl = ArraysPlume.IntArrayComparatorLexical.it;
     Comparator<int[]> iaclf = ArraysPlume.IntArrayComparatorLengthFirst.it;
 
-    int[] a0 = new int[] {};
-    int[] a1 = new int[] {};
-    int[] a2 = new int[] {0, 1, 2, 3};
-    int[] a3 = new int[] {0, 1, 2, 3, 0};
-    int[] a4 = new int[] {0, 1, 2, 3, 4};
-    int[] a5 = new int[] {0, 1, 2, 3, 4};
-    int[] a6 = new int[] {0, 1, 5, 3, 4};
-    int[] a7 = new int[] {1, 2, 3, 4};
-    int[] a8 = new int[] {-5};
-    int[] a9 = new int[] {Integer.MAX_VALUE};
-    int[] a10 = new int[] {Integer.MIN_VALUE};
+    int[] a0 = {};
+    int[] a1 = {};
+    int[] a2 = {0, 1, 2, 3};
+    int[] a3 = {0, 1, 2, 3, 0};
+    int[] a4 = {0, 1, 2, 3, 4};
+    int[] a5 = {0, 1, 2, 3, 4};
+    int[] a6 = {0, 1, 5, 3, 4};
+    int[] a7 = {1, 2, 3, 4};
+    int[] a8 = {-5};
+    int[] a9 = {Integer.MAX_VALUE};
+    int[] a10 = {Integer.MIN_VALUE};
 
-    assertTrue(iacl.compare(a0, a1) == 0);
-    assertTrue(iaclf.compare(a0, a1) == 0);
-    assertTrue(iacl.compare(a1, a0) == 0);
-    assertTrue(iaclf.compare(a1, a0) == 0);
+    assertEquals(0, iacl.compare(a0, a1));
+    assertEquals(0, iaclf.compare(a0, a1));
+    assertEquals(0, iacl.compare(a1, a0));
+    assertEquals(0, iaclf.compare(a1, a0));
     assertTrue(iacl.compare(a1, a2) < 0);
     assertTrue(iaclf.compare(a1, a2) < 0);
     assertTrue(iacl.compare(a2, a1) > 0);
@@ -629,10 +632,10 @@ final class ArraysPlumeTest {
     assertTrue(iaclf.compare(a3, a4) < 0);
     assertTrue(iacl.compare(a4, a3) > 0);
     assertTrue(iaclf.compare(a4, a3) > 0);
-    assertTrue(iacl.compare(a4, a5) == 0);
-    assertTrue(iaclf.compare(a4, a5) == 0);
-    assertTrue(iacl.compare(a5, a4) == 0);
-    assertTrue(iaclf.compare(a5, a4) == 0);
+    assertEquals(0, iacl.compare(a4, a5));
+    assertEquals(0, iaclf.compare(a4, a5));
+    assertEquals(0, iacl.compare(a5, a4));
+    assertEquals(0, iaclf.compare(a5, a4));
     assertTrue(iacl.compare(a5, a6) < 0);
     assertTrue(iaclf.compare(a5, a6) < 0);
     assertTrue(iacl.compare(a6, a5) > 0);
@@ -670,22 +673,22 @@ final class ArraysPlumeTest {
 
     Comparator<long[]> lacl = ArraysPlume.LongArrayComparatorLexical.it;
     Comparator<long[]> laclf = ArraysPlume.LongArrayComparatorLengthFirst.it;
-    long[] a0 = new long[] {};
-    long[] a1 = new long[] {};
-    long[] a2 = new long[] {0, 1, 2, 3};
-    long[] a3 = new long[] {0, 1, 2, 3, 0};
-    long[] a4 = new long[] {0, 1, 2, 3, 4};
-    long[] a5 = new long[] {0, 1, 2, 3, 4};
-    long[] a6 = new long[] {0, 1, 5, 3, 4};
-    long[] a7 = new long[] {1, 2, 3, 4};
-    long[] a8 = new long[] {-5};
-    long[] a9 = new long[] {Long.MAX_VALUE};
-    long[] a10 = new long[] {Long.MIN_VALUE};
+    long[] a0 = {};
+    long[] a1 = {};
+    long[] a2 = {0, 1, 2, 3};
+    long[] a3 = {0, 1, 2, 3, 0};
+    long[] a4 = {0, 1, 2, 3, 4};
+    long[] a5 = {0, 1, 2, 3, 4};
+    long[] a6 = {0, 1, 5, 3, 4};
+    long[] a7 = {1, 2, 3, 4};
+    long[] a8 = {-5};
+    long[] a9 = {Long.MAX_VALUE};
+    long[] a10 = {Long.MIN_VALUE};
 
-    assertTrue(lacl.compare(a0, a1) == 0);
-    assertTrue(laclf.compare(a0, a1) == 0);
-    assertTrue(lacl.compare(a1, a0) == 0);
-    assertTrue(laclf.compare(a1, a0) == 0);
+    assertEquals(0, lacl.compare(a0, a1));
+    assertEquals(0, laclf.compare(a0, a1));
+    assertEquals(0, lacl.compare(a1, a0));
+    assertEquals(0, laclf.compare(a1, a0));
     assertTrue(lacl.compare(a1, a2) < 0);
     assertTrue(laclf.compare(a1, a2) < 0);
     assertTrue(lacl.compare(a2, a1) > 0);
@@ -698,10 +701,10 @@ final class ArraysPlumeTest {
     assertTrue(laclf.compare(a3, a4) < 0);
     assertTrue(lacl.compare(a4, a3) > 0);
     assertTrue(laclf.compare(a4, a3) > 0);
-    assertTrue(lacl.compare(a4, a5) == 0);
-    assertTrue(laclf.compare(a4, a5) == 0);
-    assertTrue(lacl.compare(a5, a4) == 0);
-    assertTrue(laclf.compare(a5, a4) == 0);
+    assertEquals(0, lacl.compare(a4, a5));
+    assertEquals(0, laclf.compare(a4, a5));
+    assertEquals(0, lacl.compare(a5, a4));
+    assertEquals(0, laclf.compare(a5, a4));
     assertTrue(lacl.compare(a5, a6) < 0);
     assertTrue(laclf.compare(a5, a6) < 0);
     assertTrue(lacl.compare(a6, a5) > 0);
@@ -737,31 +740,31 @@ final class ArraysPlumeTest {
     // public static class DoubleArrayComparatorLexical implements Comparator
 
     Comparator<double[]> dacl = ArraysPlume.DoubleArrayComparatorLexical.it;
-    double[] a0 = new double[] {};
-    double[] a1 = new double[] {};
-    double[] a2 = new double[] {0, 1, 2, 3};
-    double[] a3 = new double[] {0, 1, 2, 3, 0};
-    double[] a4 = new double[] {0, 1, 2, 3, 4};
-    double[] a5 = new double[] {0, 1, 2, 3, 4};
-    double[] a6 = new double[] {0, 1, 5, 3, 4};
-    double[] a7 = new double[] {1, 2, 3, 4};
-    double[] a8 = new double[] {0.005};
-    double[] a9 = new double[] {0.004};
-    double[] a10 = new double[] {-0.005};
-    double[] a11 = new double[] {-0.004};
-    double[] a12 = new double[] {10.0 * Integer.MAX_VALUE};
-    double[] a13 = new double[] {10.0 * Integer.MIN_VALUE};
+    double[] a0 = {};
+    double[] a1 = {};
+    double[] a2 = {0, 1, 2, 3};
+    double[] a3 = {0, 1, 2, 3, 0};
+    double[] a4 = {0, 1, 2, 3, 4};
+    double[] a5 = {0, 1, 2, 3, 4};
+    double[] a6 = {0, 1, 5, 3, 4};
+    double[] a7 = {1, 2, 3, 4};
+    double[] a8 = {0.005};
+    double[] a9 = {0.004};
+    double[] a10 = {-0.005};
+    double[] a11 = {-0.004};
+    double[] a12 = {10.0 * Integer.MAX_VALUE};
+    double[] a13 = {10.0 * Integer.MIN_VALUE};
 
-    assertTrue(dacl.compare(a0, a1) == 0);
-    assertTrue(dacl.compare(a1, a0) == 0);
+    assertEquals(0, dacl.compare(a0, a1));
+    assertEquals(0, dacl.compare(a1, a0));
     assertTrue(dacl.compare(a1, a2) < 0);
     assertTrue(dacl.compare(a2, a1) > 0);
     assertTrue(dacl.compare(a2, a3) < 0);
     assertTrue(dacl.compare(a3, a2) > 0);
     assertTrue(dacl.compare(a3, a4) < 0);
     assertTrue(dacl.compare(a4, a3) > 0);
-    assertTrue(dacl.compare(a4, a5) == 0);
-    assertTrue(dacl.compare(a5, a4) == 0);
+    assertEquals(0, dacl.compare(a4, a5));
+    assertEquals(0, dacl.compare(a5, a4));
     assertTrue(dacl.compare(a5, a6) < 0);
     assertTrue(dacl.compare(a6, a5) > 0);
     assertTrue(dacl.compare(a6, a7) < 0);
@@ -794,23 +797,23 @@ final class ArraysPlumeTest {
 
     Comparator<String[]> cacl = new ArraysPlume.ComparableArrayComparatorLexical<String>();
     Comparator<String[]> caclf = new ArraysPlume.ComparableArrayComparatorLengthFirst<String>();
-    String[] a0 = new String[] {};
-    String[] a1 = new String[] {};
-    String[] a2 = new String[] {"0", "1", "2", "3"};
-    String[] a3 = new String[] {"0", "1", "2", "3", "0"};
-    String[] a4 = new String[] {"0", "1", "2", "3", "4"};
-    String[] a5 = new String[] {"0", "1", "2", "3", "4"};
-    String[] a6 = new String[] {"0", "1", "5", "3", "4"};
-    String[] a7 = new String[] {"1", "2", "3", "4"};
+    String[] a0 = {};
+    String[] a1 = {};
+    String[] a2 = {"0", "1", "2", "3"};
+    String[] a3 = {"0", "1", "2", "3", "0"};
+    String[] a4 = {"0", "1", "2", "3", "4"};
+    String[] a5 = {"0", "1", "2", "3", "4"};
+    String[] a6 = {"0", "1", "5", "3", "4"};
+    String[] a7 = {"1", "2", "3", "4"};
     @SuppressWarnings(
         "nullness") // accommodates poor annotation on ComparableArrayComparatorLexical.compare()
     // and ComparableArrayComparatorLengthFirst.compare()
-    String[] a8 = new String[] {"0", "1", null, "3", "4"};
+    String[] a8 = {"0", "1", null, "3", "4"};
 
-    assertTrue(cacl.compare(a0, a1) == 0);
-    assertTrue(caclf.compare(a0, a1) == 0);
-    assertTrue(cacl.compare(a1, a0) == 0);
-    assertTrue(caclf.compare(a1, a0) == 0);
+    assertEquals(0, cacl.compare(a0, a1));
+    assertEquals(0, caclf.compare(a0, a1));
+    assertEquals(0, cacl.compare(a1, a0));
+    assertEquals(0, caclf.compare(a1, a0));
     assertTrue(cacl.compare(a1, a2) < 0);
     assertTrue(caclf.compare(a1, a2) < 0);
     assertTrue(cacl.compare(a2, a1) > 0);
@@ -823,10 +826,10 @@ final class ArraysPlumeTest {
     assertTrue(caclf.compare(a3, a4) < 0);
     assertTrue(cacl.compare(a4, a3) > 0);
     assertTrue(caclf.compare(a4, a3) > 0);
-    assertTrue(cacl.compare(a4, a5) == 0);
-    assertTrue(caclf.compare(a4, a5) == 0);
-    assertTrue(cacl.compare(a5, a4) == 0);
-    assertTrue(caclf.compare(a5, a4) == 0);
+    assertEquals(0, cacl.compare(a4, a5));
+    assertEquals(0, caclf.compare(a4, a5));
+    assertEquals(0, cacl.compare(a5, a4));
+    assertEquals(0, caclf.compare(a5, a4));
     assertTrue(cacl.compare(a5, a6) < 0);
     assertTrue(caclf.compare(a5, a6) < 0);
     assertTrue(cacl.compare(a6, a5) > 0);
@@ -869,20 +872,20 @@ final class ArraysPlumeTest {
     // public static boolean anyNull(Object[] a)
 
     Object o = new Object();
-    assertTrue(ArraysPlume.anyNull(new Object[] {}) == false);
-    assertTrue(ArraysPlume.anyNull(new Object[] {null}) == true);
-    assertTrue(ArraysPlume.anyNull(new Object[] {null, null}) == true);
-    assertTrue(ArraysPlume.anyNull(new Object[] {o}) == false);
-    assertTrue(ArraysPlume.anyNull(new Object[] {o, o}) == false);
-    assertTrue(ArraysPlume.anyNull(new Object[] {o, null, null}) == true);
-    assertTrue(ArraysPlume.anyNull(new Object[] {null, o, null}) == true);
-    assertTrue(ArraysPlume.anyNull(new Object[] {o, null, o}) == true);
-    assertTrue(ArraysPlume.anyNull(new Object[] {null, o, o}) == true);
-    assertTrue(ArraysPlume.anyNull(new Object[][] {}) == false);
-    assertTrue(ArraysPlume.anyNull(new Object[][] {null}) == true);
+    assertFalse(ArraysPlume.anyNull(new Object[] {}));
+    assertTrue(ArraysPlume.anyNull(new Object[] {null}));
+    assertTrue(ArraysPlume.anyNull(new Object[] {null, null}));
+    assertFalse(ArraysPlume.anyNull(new Object[] {o}));
+    assertFalse(ArraysPlume.anyNull(new Object[] {o, o}));
+    assertTrue(ArraysPlume.anyNull(new Object[] {o, null, null}));
+    assertTrue(ArraysPlume.anyNull(new Object[] {null, o, null}));
+    assertTrue(ArraysPlume.anyNull(new Object[] {o, null, o}));
+    assertTrue(ArraysPlume.anyNull(new Object[] {null, o, o}));
+    assertFalse(ArraysPlume.anyNull(new Object[][] {}));
+    assertTrue(ArraysPlume.anyNull(new Object[][] {null}));
     // Extraneous @Nullable on the following lines are due to https://tinyurl.com/cfissue/599
-    assertTrue(ArraysPlume.anyNull(new @Nullable Object[][] {new Object[] {null}}) == false);
-    assertTrue(ArraysPlume.anyNull(new @Nullable Object[][] {new Object[] {null}, null}) == true);
+    assertFalse(ArraysPlume.anyNull(new @Nullable Object[][] {new Object[] {null}}));
+    assertTrue(ArraysPlume.anyNull(new @Nullable Object[][] {new Object[] {null}, null}));
     assertFalse(
         ArraysPlume.anyNull(new @Nullable Object[][] {new Object[] {null}, new Object[] {o}}));
   }
@@ -893,20 +896,20 @@ final class ArraysPlumeTest {
     // public static boolean allNull(Object[] a)
 
     Object o = new Object();
-    assertTrue(ArraysPlume.allNull(new Object[] {}) == true);
-    assertTrue(ArraysPlume.allNull(new Object[] {null}) == true);
-    assertTrue(ArraysPlume.allNull(new Object[] {null, null}) == true);
-    assertTrue(ArraysPlume.allNull(new Object[] {o}) == false);
-    assertTrue(ArraysPlume.allNull(new Object[] {o, o}) == false);
-    assertTrue(ArraysPlume.allNull(new Object[] {o, null, null}) == false);
-    assertTrue(ArraysPlume.allNull(new Object[] {null, o, null}) == false);
-    assertTrue(ArraysPlume.allNull(new Object[] {o, null, o}) == false);
-    assertTrue(ArraysPlume.allNull(new Object[] {null, o, o}) == false);
-    assertTrue(ArraysPlume.allNull(new Object[][] {}) == true);
-    assertTrue(ArraysPlume.allNull(new Object[][] {null}) == true);
-    assertTrue(ArraysPlume.allNull(new Object[][] {null, null}) == true);
-    assertTrue(ArraysPlume.allNull(new @Nullable Object[][] {new Object[] {null}}) == false);
-    assertTrue(ArraysPlume.allNull(new @Nullable Object[][] {new Object[] {null}, null}) == false);
+    assertTrue(ArraysPlume.allNull(new Object[] {}));
+    assertTrue(ArraysPlume.allNull(new Object[] {null}));
+    assertTrue(ArraysPlume.allNull(new Object[] {null, null}));
+    assertFalse(ArraysPlume.allNull(new Object[] {o}));
+    assertFalse(ArraysPlume.allNull(new Object[] {o, o}));
+    assertFalse(ArraysPlume.allNull(new Object[] {o, null, null}));
+    assertFalse(ArraysPlume.allNull(new Object[] {null, o, null}));
+    assertFalse(ArraysPlume.allNull(new Object[] {o, null, o}));
+    assertFalse(ArraysPlume.allNull(new Object[] {null, o, o}));
+    assertTrue(ArraysPlume.allNull(new Object[][] {}));
+    assertTrue(ArraysPlume.allNull(new Object[][] {null}));
+    assertTrue(ArraysPlume.allNull(new Object[][] {null, null}));
+    assertFalse(ArraysPlume.allNull(new @Nullable Object[][] {new Object[] {null}}));
+    assertFalse(ArraysPlume.allNull(new @Nullable Object[][] {new Object[] {null}, null}));
     assertFalse(
         ArraysPlume.allNull(new @Nullable Object[][] {new Object[] {null}, new Object[] {o}}));
   }
@@ -969,15 +972,15 @@ final class ArraysPlumeTest {
   List<String> abcList = Arrays.asList("a", "b", "c");
   List<String> defList = Arrays.asList("d", "e", "f");
 
-  String[] abcdefArray = new String[] {"a", "b", "c", "d", "e", "f"};
-  String[] abcArray = new String[] {"a", "b", "c"};
-  String[] defArray = new String[] {"d", "e", "f"};
-  String[] emptyArray = new String[] {};
+  String[] abcdefArray = {"a", "b", "c", "d", "e", "f"};
+  String[] abcArray = {"a", "b", "c"};
+  String[] defArray = {"d", "e", "f"};
+  String[] emptyArray = {};
 
-  Object[] abcdefArrayObject = new Object[] {"a", "b", "c", "d", "e", "f"};
-  Object[] abcArrayObject = new Object[] {"a", "b", "c"};
-  Object[] defArrayObject = new Object[] {"d", "e", "f"};
-  Object[] emptyArrayObject = new Object[] {};
+  Object[] abcdefArrayObject = {"a", "b", "c", "d", "e", "f"};
+  Object[] abcArrayObject = {"a", "b", "c"};
+  Object[] defArrayObject = {"d", "e", "f"};
+  Object[] emptyArrayObject = {};
 
   @Test
   void testConcatenate() {
@@ -996,8 +999,8 @@ final class ArraysPlumeTest {
 
   @Test
   void testConcat() {
-    Instant[] da1 = new Instant[] {Instant.now()};
-    Instant[] da2 = new Instant[] {Instant.now()};
+    Instant[] da1 = {Instant.now()};
+    Instant[] da2 = {Instant.now()};
     Instant[] da3 = ArraysPlume.concat(da1, da2);
     assert da3.length == 2 : "@AssumeAssertion(index)";
     assertEquals(da3.length, 2);
@@ -1017,8 +1020,8 @@ final class ArraysPlumeTest {
 
   @Test
   void testMapArray() {
-    Integer[] iota = new Integer[] {0, 1, 2, 3};
-    String[] iotaStringGoal = new String[] {"0", "1", "2", "3"};
+    Integer[] iota = {0, 1, 2, 3};
+    String[] iotaStringGoal = {"0", "1", "2", "3"};
     String[] iotaStringActual =
         ArraysPlume.<Integer, String>mapArray(i -> i.toString(), iota, String.class);
     assertArrayEquals(iotaStringActual, iotaStringGoal);
@@ -1028,9 +1031,8 @@ final class ArraysPlumeTest {
   @Test
   void testReplaceAll() {
     Instant now = Instant.now();
-    @Nullable Instant[] da2 = new Instant[] {now, Instant.now(), null};
-    @Nullable Instant[] da3 = new Instant[] {now, Instant.now(), null};
-
+    @Nullable Instant[] da2 = {now, Instant.now(), null};
+    @Nullable Instant[] da3 = {now, Instant.now(), null};
     ArraysPlume.replaceAll(da2, null, Instant.now());
     assertFalse(ArraysPlume.anyNull(da2));
     ArraysPlume.replaceAll(da3, now, Instant.now());
